fixed the wrap for projects

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,9 @@ a{
 }
 
 .projects{
-  width: 75%;
+  width: 65%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
